--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "tdd-by-example",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
-  },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   }
 }
